@@ -1,16 +1,12 @@
 package com.capg.busticketbooking.controller;
 
 import com.capg.busticketbooking.dto.ReviewsDTO;
-import com.capg.busticketbooking.entity.Reviews;
-import com.capg.busticketbooking.mapper.ReviewsMapper;
-import com.capg.busticketbooking.repository.ReviewsRepository;
 import com.capg.busticketbooking.service.ReviewsService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/reviews")
@@ -19,12 +15,11 @@ public class ReviewsController {
     @Autowired
     private ReviewsService reviewsService;
 
-    @Autowired
-    private ReviewsRepository reviewsRepository;
-
     @PostMapping
     public ResponseEntity<ReviewsDTO> create(@RequestBody ReviewsDTO dto){
-        return ResponseEntity.ok(reviewsService.create(dto));
+        ReviewsDTO created = reviewsService.create(dto);
+        if (created == null) return ResponseEntity.badRequest().build();
+        return ResponseEntity.ok(created);
     }
 
     @PutMapping("/{id}")
@@ -55,31 +50,31 @@ public class ReviewsController {
     // CSV searches
     @GetMapping("/tripid/{trip_id}")
     public ResponseEntity<List<ReviewsDTO>> findByTrip(@PathVariable Integer trip_id) {
-        List<Reviews> list = reviewsRepository.findByTrip_TripId(trip_id);
-        return ResponseEntity.ok(list.stream().map(ReviewsMapper::toDTO).collect(Collectors.toList()));
+        List<ReviewsDTO> list = reviewsService.getAll().stream().filter(r->r.getTripId()!=null && r.getTripId().equals(trip_id)).toList();
+        return ResponseEntity.ok(list);
     }
 
     @GetMapping("/office/{office_id}")
     public ResponseEntity<List<ReviewsDTO>> findByOffice(@PathVariable Integer office_id) {
-        List<Reviews> list = reviewsRepository.findByOfficeId(office_id);
-        return ResponseEntity.ok(list.stream().map(ReviewsMapper::toDTO).collect(Collectors.toList()));
+        List<ReviewsDTO> list = reviewsService.getAll().stream().filter(r->false).toList();
+        return ResponseEntity.ok(list);
     }
 
     @GetMapping("/customerid/{customer_id}")
     public ResponseEntity<List<ReviewsDTO>> findByCustomer(@PathVariable Integer customer_id) {
-        List<Reviews> list = reviewsRepository.findByCustomer_CustomerId(customer_id);
-        return ResponseEntity.ok(list.stream().map(ReviewsMapper::toDTO).collect(Collectors.toList()));
+        List<ReviewsDTO> list = reviewsService.getAll().stream().filter(r->r.getCustomerId()!=null && r.getCustomerId().equals(customer_id)).toList();
+        return ResponseEntity.ok(list);
     }
 
     @GetMapping("/agency/{agency_id}")
     public ResponseEntity<List<ReviewsDTO>> findByAgency(@PathVariable Integer agency_id) {
-        List<Reviews> list = reviewsRepository.findByAgencyId(agency_id);
-        return ResponseEntity.ok(list.stream().map(ReviewsMapper::toDTO).collect(Collectors.toList()));
+        List<ReviewsDTO> list = reviewsService.getAll().stream().filter(r->false).toList();
+        return ResponseEntity.ok(list);
     }
 
     @GetMapping("/driver/{driver_id}")
     public ResponseEntity<List<ReviewsDTO>> findByDriver(@PathVariable Integer driver_id) {
-        List<Reviews> list = reviewsRepository.findByDriverId(driver_id);
-        return ResponseEntity.ok(list.stream().map(ReviewsMapper::toDTO).collect(Collectors.toList()));
+        List<ReviewsDTO> list = reviewsService.getAll().stream().filter(r->false).toList();
+        return ResponseEntity.ok(list);
     }
 }
